# airport-data-quality-monitoring

./: README.md  airport_DB.py  airport_data.db  main.py  pyproject.toml
data/: MOCK_DATA_fixed.sql  airport_data.db  fixing_data_syntax.py
src/: analysis_tools.py  create_airport_DB.py  data_quality_monitor.py  fixing_data_syntax.py  main.py  report.md  streamlit_app.py
